Can set max_trait_points to 0 to disable traits
Updated the attributes screen in character creation (first pass)
Slightly adjusted distance between top tab menu items and lower ones
Fixed a bug where tab menu buttons clipped the text inside them
Updated tab menu items to use proper markup tooltips
Added translatable character model tooltip
Updated default tooltip text font to make it look nicer
Added extra language strings to center text in HL2RP

Added .traits as an option for HasObjectAccess so classes, or business items can require specific traits
Replaced all instances of seperate with separate (my life is a lie)

Added Swedish translations (thanks Aberidius!)
Fixed an English translation error (connected from instead of connected to)
Fixed PermaKill mode (needs properly re-testing)
Updated Directory to use language translations
Updated some Directory pages to use proper CSS formatting
Made plugin and schema descriptions (and names) translatable

04/09/2017 (Clockwork)
Proper attribute language description for attributes
Removed sh_fixes.lua file as it's no longer used in this update
Localized Stamina attribute in the stamina plugin
Moved Stamina plugin back to HL2RP because it's stupid that it was ever in the framework, the schema and its plugins should decide what attributes exist
Added character name limit (thanks HappyGoLucky1!)
Updated Korean translation files (thanks Tensa!)
Removed a config option that was unused (name_crafting)

04/09/2017 (HL2RP)
Added descriptions for all attributes to the language file
Added proper icons for all attributes

05/09/2017
Updated all system panels to use proper form and padding
Added missing language strings to system panels
Started work on an alternative version of the theme (slightly more plainer, different font) which one you use is your choice (or make your own!)
Updated a whole bunch of derma related files
Changed the way the System menu works and updated its styling
Added System icons for each System type